WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268430
Corrupt tiles when scrolling and selecting text quickly.
https://bugs.webkit.org/show_bug.cgi?id=268430
Summary
Corrupt tiles when scrolling and selecting text quickly.
Matt Woodrow
Reported
2024-01-30 18:33:10 PST
<
rdar://121934201
>
Attachments
Add attachment
proposed patch, testcase, etc.
Matt Woodrow
Comment 1
2024-01-30 18:40:44 PST
Pull request:
https://github.com/WebKit/WebKit/pull/22958
Matt Woodrow
Comment 2
2024-01-30 19:29:21 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23558
EWS
Comment 3
2024-01-31 10:33:42 PST
Committed
273838@main
(77e5bb391073): <
https://commits.webkit.org/273838@main
> Reviewed commits have been landed. Closing PR #23558 and removing active labels.
Alexey Proskuryakov
Comment 4
2024-02-20 09:08:30 PST
***
Bug 269765
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug