Cherry-pick 77e5bb391073. rdar://121934201

Corrupt tiles when scrolling and selecting text quickly.
    https://bugs.webkit.org/show_bug.cgi?id=268430
    <rdar://121934201>

    Reviewed by Simon Fraser.

    If ensureBufferForDisplay returns SwapBuffersDisplayRequirement::NeedsNoDisplay, then we don't want
    to call prepareForDisplay. The latter copies pixels from the old front buffer into the new one,
    and when no display is required there wasn't a front/back swap, so no copy needed.

    This caused issues because we also set 'm_previouslyPaintedRect` to the (empty!) dirty area,
    effectively recording that the front and back buffers were identical, despite it likely
    not being true. The next attempt to paint these buffers would omit a back-to-front copy,
    thinking the buffers were identical, and then we'd do a partial update on top of stale content.

    This happens when scrolling, since scrolling tiles get pooled (and made volatile), then
    recycled.

    * LayoutTests/compositing/repaint/needs-no-display-volatile-repaint-expected.html: Added.
    * LayoutTests/compositing/repaint/needs-no-display-volatile-repaint.html: Added.
    * Source/WebKit/GPUProcess/graphics/RemoteRenderingBackend.cpp:
    (WebKit::RemoteRenderingBackend::prepareImageBufferSetsForDisplay):
    (WebKit::RemoteRenderingBackend::prepareImageBufferSetsForDisplaySync):

    Canonical link: https://commits.webkit.org/273838@main

Identifier: 272448.485@safari-7618-branch